
	* Source/NSWorkspace.m: remove an app from list of launched apps if
	we can't contact it.
	* Source/NSApplication.m: ([hideOtherApplications:]) implemented.
	([unhideAllApplications:]) implemented.
	Send did hide and did unhide notifications to the workspace center
	so the workspace manager knows about them.
	Honor the NSWindow-canHide method when deactivating apps.

2006-02-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: Send activation/deactivation notifications
	to workspace center too ... so workspace manager will know about it.
	* Source/NSWorkspace.m: Change internal method to launch applications
	so that it never asks the workspace manager to do it ... that should
	be handled by the public methods instead.  Simplify a little to take
	advantage of change to NSApplication.

2006-01-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: pass more informative user info in
	notifications.
	* Source/NSWorkspace.m: Implement filesystem based fallback mechanisms
	for tracking launched and active appplications when there is no
	workspace manager process to do it.
	Try to be consistent about asking workspace manager application to
	perform tasks for us if it exists.
	* Tools/gscloseall.m: Test tool to iterate through launched apps and
	terminate them all.
	* Tools/GNUmakefile:
	* Tools/GNUmakefile.preamble:
	Build new utility.

2006-01-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopupButtonCell.m (-synchronizeTitleAndSelectedItem):
	Only select an item if one is highlighted.
	* Source/Functions.m: NSFrameRectWithWidthUsingOperation() new
	function from Cocoa. NSFrameRectWithWidth() different
	implementation, no longer using stroke.

2006-01-20  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableHeaderCell.m: Simplified code by letting
	the super classes do their job.

2006-01-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: minor fixups for 64bit cpu support.
